# aiqso-odoo-crm

./: .claude-plugins  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_NOTES.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: backup.yml  ci.yml  deploy.yml  docs.yml
api/: main.py  odoo-api.env.example
docs/: CONFIGURATION.md  LEAD_LIST_STRUCTURE.md  api.md  changelog.md  getting-started.md  index.md
docs/api/: reference.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guide/: examples.md
scripts/: .env.cron.example  config.py  create_products.py  cron-sync.sh  health_check.py  import_commercial_leads.py  import_lead_list.py  invite_portal_user.py  odoo-sync.sh  setup_stripe.py  sync_enriched_leads.py
